[gd_scene load_steps=25 format=2]

[ext_resource path="res://Cannon.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/KestrelTileset.tres" type="TileSet" id=2]
[ext_resource path="res://experimentalShaders/pinkSun.shader" type="Shader" id=3]
[ext_resource path="res://WeaponSlotsContainer.gd" type="Script" id=4]
[ext_resource path="res://WeaponSlot.gd" type="Script" id=5]
[ext_resource path="res://Assets/art/KESTREL.png" type="Texture" id=6]
[ext_resource path="res://OperationalTile.gd" type="Script" id=7]
[ext_resource path="res://ShipTiles.gd" type="Script" id=8]
[ext_resource path="res://WallsTilemap.gd" type="Script" id=9]
[ext_resource path="res://Data/Ships/Ship.gd" type="Script" id=10]
[ext_resource path="res://unused/Hull.gd" type="Script" id=11]
[ext_resource path="res://InteractableTilemap.gd" type="Script" id=12]
[ext_resource path="res://FloorTilemap.gd" type="Script" id=13]
[ext_resource path="res://Assets/art/fire1.png" type="Texture" id=14]
[ext_resource path="res://Assets/art/fire3.png" type="Texture" id=15]
[ext_resource path="res://Assets/art/fire2.png" type="Texture" id=17]
[ext_resource path="res://Assets/art/test_cannon.png" type="Texture" id=19]
[ext_resource path="res://Engine.gd" type="Script" id=20]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform bool greyout;


void vertex() {
  // Animate Sprite moving in big circle around its location
  // VERTEX += vec2(cos(TIME)*100.0, sin(TIME)*100.0);
  // VERTEX += UV;
}

void fragment() {
    COLOR = texture(TEXTURE, UV);
    if(greyout) {
        float g = (COLOR.r + COLOR.g + COLOR.b)/6.0;
        COLOR = vec4(g, g, g, COLOR.a * 0.6); // sin(TIME);
    }
    // COLOR = vec4(sin(TIME), UV, 1.0);
}

//void light() {
//    LIGHT_VEC = vec2(20.0, 30.0);
//    LIGHT_COLOR = vec4(0.5, 1.0, 0.0, 1.0);
//    LIGHT = vec4(0.0, 1.0, 0.0, 1.0);
//}

//void fragment() {
//  ALBEDO = vec3(1.0, 0, 0);   
//}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/greyout = null

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 17 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;
uniform vec4 currentColour : hint_color;

void fragment () {
    vec4 finalColour = mix(texture(TEXTURE, UV), currentColour, texture(TEXTURE, UV));
    COLOR = finalColour;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/currentColour = Color( 0.92549, 0.933333, 0.541176, 1 )

[node name="Ship" type="KinematicBody2D"]
script = ExtResource( 10 )

[node name="Hull" type="Sprite" parent="."]
material = SubResource( 2 )
rotation = 1.13687e-12
texture = ExtResource( 6 )
script = ExtResource( 11 )

[node name="MainLeftEngine" type="AnimatedSprite" parent="Hull"]
position = Vector2( -285, -135 )
rotation = 1.57079
scale = Vector2( 0.4, 0.3 )
frames = SubResource( 3 )
playing = true
script = ExtResource( 20 )

[node name="MainRightEngine" type="AnimatedSprite" parent="Hull"]
position = Vector2( -281.256, 135 )
rotation = 1.5708
scale = Vector2( 0.4, 0.281279 )
frames = SubResource( 3 )
frame = 2
playing = true
script = ExtResource( 20 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
rotation = 1.03022e-12
scale = Vector2( 10, 2 )
polygon = PoolVector2Array( -6, -34, -2, -34, -1, -22, 3, -12, 8, -5, 8, 5, 3, 12, -1, 22, -2, 34, -6, 34, -6, 13, -8, 7, -8, -7, -6, -13 )

[node name="WeaponSlots" type="Node2D" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightSlot" type="Sprite" parent="WeaponSlots"]
position = Vector2( -10, 110 )
rotation = 1.0472
texture = ExtResource( 19 )
vframes = 4
hframes = 6
frame = 1
script = ExtResource( 5 )

[node name="Cannon" parent="WeaponSlots/RightSlot" instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
rotation = 0.0

[node name="LeftSlot" type="Sprite" parent="WeaponSlots"]
position = Vector2( -10, -110 )
rotation = -1.0472
texture = ExtResource( 19 )
vframes = 4
hframes = 6
frame = 1
script = ExtResource( 5 )

[node name="Cannon" parent="WeaponSlots/LeftSlot" instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
rotation = 0.0

[node name="TilemapManager" type="Node2D" parent="."]
material = SubResource( 4 )
position = Vector2( 0, 7.62939e-06 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 8 )

[node name="FloorTilemap" type="TileMap" parent="TilemapManager" groups=[
"floor_tilemaps",
"saveable_tilemaps",
]]
rotation = 1.13687e-12
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 1024
collision_mask = 2147483648
format = 1
script = ExtResource( 13 )

[node name="WallsTilemap" type="TileMap" parent="TilemapManager" groups=[
"saveable_tilemaps",
"wall_tilemaps",
]]
rotation = 1.13687e-12
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 1024
collision_mask = 2147483648
format = 1
script = ExtResource( 9 )

[node name="OperationalTilemap" type="TileMap" parent="TilemapManager" groups=[
"operational_tilemaps",
]]
material = SubResource( 6 )
rotation = 1.13687e-12
z_index = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
script = ExtResource( 7 )
red = Color( 1, 0, 0, 0.686275 )
green = Color( 0, 1, 0, 0.686275 )

[node name="InteractableTilemap" type="TileMap" parent="TilemapManager" groups=[
"interactable_tilemaps",
"saveable_tilemaps",
]]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 1024
collision_mask = 0
format = 1
script = ExtResource( 12 )
